# dossierfortil

./: .env.example  .env.local.example  .env.vercel.example  .vercelignore  ARCHITECTURE.md  AUTHENTIFICATION_MICROSOFT.md  CHECKLIST_DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOY_QUICK_START.md  DIAGNOSTIC_CONFIGURATION.md  DOCUMENTATION.md  Dockerfile  EXEMPLES_AUTH.md  FIX_PROVIDER_NOT_ENABLED.md  FIX_SUPABASE_ENV.md  Fortil - VARIANTE - RPR - AMOA - 2 ans d'XP.docx  INDEX_AUTH.md  INSTALLATION_COMPLETE.md  QUICK_START.md  README.md  README_AUTH.md  START_HERE.md  SUPABASE_CREDENTIALS.md  SYNTHESE_FINALE.md  VERCEL_CHECKLIST.md  VERCEL_DEPLOYMENT.md  VERIFICATION_INSTALLATION.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  vercel.json  vite.config.ts
CV2DOC-n8n-flow-main/: .env.template  .gitignore  DOCUMENTATION-CV2DOC.md  Dockerfile  README.md  docker-compose.yaml
CV2DOC-n8n-flow-main/JSON_outputs/: CV_PROBST_OCT2025.json
CV2DOC-n8n-flow-main/cv2doc/: .dockerignore  .env.template  .gitignore  Dockerfile  README.fr.md  README.md  main.py  pyproject.toml
CV2DOC-n8n-flow-main/cv2doc/src/cv2doc/: main.py  settings.py
CV2DOC-n8n-flow-main/cv2doc/src/cv2doc/analyse_cv/: ai_analyzing.py  models.py  prompt.md
CV2DOC-n8n-flow-main/cv2doc/src/cv2doc/helpers/: pdf_rendering.py
CV2DOC-n8n-flow-main/cv2doc/src/cv2doc/json2doc/: json_rendering.py  template.docx
backend/: README.md  index-postgres.mjs  index.mjs  package-lock.json  package.json  profiles.db
scripts/: copy-pdf-worker.cjs
src/: App.tsx  index.css
src/lib/: api.ts  (+1 more)
(+27 files in other folders)
